--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body, html {
 }
 
 .hero {
-  background-image: url('image2.jpeg');
+  background-image: url('registration.jpeg');
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -19,7 +19,6 @@ body, html {
 }
 
 .overlay {
-  background: rgba(0, 0, 0, 0.7);
   height: 100%;
   display: flex;
   justify-content: center;
